--- a/1.md
+++ b/1.md
@@ -1,3 +1,15 @@
+Here's a basic **PySpark** code snippet to test in **Google Colab**, covering essential operations like **RDDs, DataFrames, Transformations, and Actions**—good for **interview preparation**.
+
+### Steps:
+1. Install PySpark in Google Colab.
+2. Initialize a Spark Session.
+3. Work with RDDs and DataFrames.
+4. Perform basic transformations and actions.
+
+---
+
+### **Basic PySpark Code for Google Colab**
+```python
 # Install PySpark (if not already installed)
 !pip install pyspark
 
@@ -37,3 +49,14 @@ print("Squared RDD:", rdd_squared.collect())
 
 # Stop Spark Session
 spark.stop()
+```
+
+---
+
+### **Key Concepts Covered:**
+✅ **Creating SparkSession**  
+✅ **Creating DataFrames**  
+✅ **Filtering Data** (`filter()`)  
+✅ **Aggregations** (`groupBy().agg()`)  
+✅ **RDD Operations** (`map()`, `collect()`)  
+
